--- a/2.md
+++ b/2.md
@@ -1,9 +1,8 @@
-# Day 2 - Notes
+# Day 2
 
-## Continuing JavaScript Recap
+## Continuing JavaScript recap
 
-_Functions inside of functions inside of functions_
-
+### From yesterday
 ```
 (function moreMath() {
 	console.log('moremath!!');
@@ -21,9 +20,14 @@ var cat = myMathFunction();	//	Assigns function to var cat
 //	}
 ```
 
-## Hoisting
+### Hoisting
 
-Before:
+Variable declarations are hoisted to the top, setting aside memory for the program to be used later. Assignments are executed in order.
+
+Function declarations are hoisted to the top as well, but are not executed until called.
+
+#### Example
+##### Before:
 
 ```
 var i;
@@ -50,7 +54,7 @@ return;
 var i;
 ```
 
-After:
+##### After:
 ```
 var i = undefined;
 var myName = undefined;
