--- a/2.md
+++ b/2.md
@@ -8,9 +8,9 @@
 	console.log('moremath!!');
 })();
 
-var myMathFunction = function(numberOne, numberTwo, lastNumber) {	//	Assigns anonymous function to var myMathFunction, which can be called later
-	return numberOne * numberTwo NaN +'four' + lastNumber;
-}
+var myMathFunction = function(numberOne, numberTwo, lastNumber) {	
+	return numberOne * numberTwo NaN + 'four' + lastNumber;
+}	//	Assigns anonymous function to var myMathFunction, which can be called later
 
 var cat = myMathFunction();	//	Assigns function to var cat
 
@@ -25,6 +25,10 @@ var cat = myMathFunction();	//	Assigns function to var cat
 Variable declarations are hoisted to the top, setting aside memory for the program to be used later. Assignments are executed in order.
 
 Function declarations are hoisted to the top as well, but are not executed until called.
+
+Hoisting also occurs within functions with local variables.
+
+The only way to get a new scope (other than global) is to use a function. For example, declared variables within `for` or `while` loops are global, __NOT__ local. 
 
 #### Example
 ##### Before:
@@ -67,7 +71,7 @@ function moreMath() {
 var myName = 'Kris';	//	From undefined
 var myCat = 'Luna';		// 	From undefined
 
-return;		//	Ends execution
+return;					//	Ends execution
 
 var i;
 ```
