--- a/2.md
+++ b/2.md
@@ -28,8 +28,6 @@ Function declarations are hoisted to the top as well, but are not executed until
 
 Hoisting also occurs within functions with local variables.
 
-The only way to get a new scope (other than global) is to use a function. For example, declared variables within `for` or `while` loops are global, __NOT__ local. 
-
 #### Example
 ##### Before:
 
@@ -75,3 +73,6 @@ return;					//	Ends execution
 
 var i;
 ```
+
+### Scoping
+The only way to get a new scope (other than global) is to use a function. For example, declared variables within `for` or `while` loops are global, __NOT__ local. Variables declared within these loops are hoisted along with other global variables.
