--- a/2.md
+++ b/2.md
@@ -1,8 +1,8 @@
-# Day 2
+# Day 2: JavaScript recap
 
-## Continuing JavaScript recap
+_Continuing our recap of JavaScript from Day 1, yesterday._
 
-### From yesterday
+## From yesterday
 ```
 (function moreMath() {
 	console.log('moremath!!');
@@ -20,16 +20,20 @@ var cat = myMathFunction();	//	Assigns function to var cat
 //	}
 ```
 
-### Hoisting
+## Hoisting & Scoping
 
-Variable declarations are hoisted to the top, setting aside memory for the program to be used later. Assignments are executed in order.
+Variable declarations are hoisted to the top, setting aside memory for the program to be used later. Assignments are executed in order. Until an assignment is made to the declared variable, its value is `undefined`. 
 
 Function declarations are hoisted to the top as well, but are not executed until called.
 
 Hoisting also occurs within functions with local variables.
 
-#### Example
-##### Before:
+The only way to get a new scope (other than global) is to use a function. For example, declared variables within `for` or `while` loops are global, __NOT__ local. Variables declared within these loops are hoisted along with other global variables.
+
+The keyword `var` is used to declare a variable __AND__ hoist it to the top of the current scope. Omitting `var` is to implicitly declare a variable, but it wouldn't be hoisted to the top of the current scope. It is a best practice to always use `var` before declaring variables.
+
+### Example
+#### Before:
 
 ```
 var i;
@@ -56,7 +60,7 @@ return;
 var i;
 ```
 
-##### After:
+#### After:
 ```
 var i = undefined;
 var myName = undefined;
@@ -73,6 +77,3 @@ return;					//	Ends execution
 
 var i;
 ```
-
-### Scoping
-The only way to get a new scope (other than global) is to use a function. For example, declared variables within `for` or `while` loops are global, __NOT__ local. Variables declared within these loops are hoisted along with other global variables.
