--- a/2.md
+++ b/2.md
@@ -1,6 +1,6 @@
 # Day 2: JavaScript recap
 
-_Continuing our recap of JavaScript from Day 1, yesterday._
+_January 26: Continuing our recap of JavaScript from Day 1, yesterday._
 
 ## From yesterday
 ```
@@ -30,7 +30,7 @@ Hoisting also occurs within functions with local variables.
 
 The only way to get a new scope (other than global) is to use a function. For example, declared variables within `for` or `while` loops are global, __NOT__ local. Variables declared within these loops are hoisted along with other global variables.
 
-The keyword `var` is used to declare a variable __AND__ hoist it to the top of the current scope. Omitting `var` is to implicitly declare a variable, but it wouldn't be hoisted to the top of the current scope. It is a best practice to always use `var` before declaring variables.
+The keyword `var` is used to declare a variable __AND__ hoist it to the top of the current scope. To omit `var` would be to implicitly declare a variable, but it wouldn't be hoisted to the top of the current scope. It is a best practice to always use `var` before declaring variables.
 
 ### Example
 #### Before:
