--- a/2.md
+++ b/2.md
@@ -93,4 +93,8 @@ second[0] = cats[0];
 
 Indices of an array start at 0. Think of it as the distance that an entry in the array is from the first entry of the array. Arrays can be passed into functions/loops. Each entry of an array is accessed using a `var i`, for example, in the initialization of the loop and referencing it with `<arrayName>[i]` within the loop.
 
-You can put arrays within arrays within arrays within arrays! :D (But don't, lol!)
+You can put arrays within arrays within arrays within arrays! :D (But don't, lol!) Functions could technically be stored within a variable, but probably wouldn't happen.
+
+## Built-Ins
+
+Forthcoming!
