Built-ins text added

--- a/2.md
+++ b/2.md
@@ -1,6 +1,6 @@
 # Day 2: JavaScript recap
 
-_January 26: Continuing our recap of JavaScript from Day 1, yesterday._
+_January 26: Continuing our recap of JavaScript from Day 1_
 
 ## From yesterday
 ```
@@ -81,7 +81,7 @@ var i;
 ## Arrays
 
 ```
-var cat = ['Luna', 'Taffy', 'Rambo', 3.14];
+var cat = ['Luna', 'Taffy', 'Rambo'];
 
 for(var i = 0; i < cats.length; i++) {
 	console.log(cats[i]);
@@ -97,4 +97,11 @@ You can put arrays within arrays within arrays within arrays! :D (But don't, lol
 
 ## Built-Ins
 
-Forthcoming!
+Variables, objects, and functions are all inherently part of JavaScript. JavaScript also comes with a bunch of built-in helper functions.
+
+Some common ones:
+* `var num = Number('747');	//	Converts argument to number`
+* `var floate = parseFloat('902.59');	//	Converts argument to number`
+* `var int = parseInt(894.22);	//	Converts argument to number, truncating decimal`
+* `var stringly = String(989);	//	Converts argument to string`
+* ```var y = num.toString();	//	Converts variable (called) to string````
