--- a/2.md
+++ b/2.md
@@ -100,8 +100,19 @@ You can put arrays within arrays within arrays within arrays! :D (But don't, lol
 Variables, objects, and functions are all inherently part of JavaScript. JavaScript also comes with a bunch of built-in helper functions.
 
 Some common ones:
-* `var num = Number('747');	//	Converts argument to number`
-* `var floate = parseFloat('902.59');	//	Converts argument to number`
-* `var int = parseInt(894.22);	//	Converts argument to number, truncating decimal`
-* `var stringly = String(989);	//	Converts argument to string`
-* ```var y = num.toString();	//	Converts variable (called) to string````
+* Numbers
+** `Number('747');		//	Converts argument to number`
+** `parseFloat('902.59');//	Converts argument (including floating point numbers) to number`
+** `parseInt(894.22);	//	Converts argument to number, truncating decimal`
+* Strings
+** `String(989);			//	Converts argument to string`
+** `num.toString();		//	Converts variable (called) to string`
+** `str.charAt(1);		//	Retrieves character at index # of string variable`
+** `str.substring(7,13);	//	Retrieves characters starting at, between & ending at 2 indicies passed in as arguments`
+** `txt.split(',');		//	Splits a string at every character that matches the argument passed in`
+* Arrays
+** `var fruits = ['Banana', 'Orange', 'Apple', 'Mango'];`
+** `fruits.push('Kiwi');		//	Adds an entry at the end of the array`
+** `fruits.pop();				//	Removes the entry at the end of the array and returns it`
+** `fruits.shift();				//	Removes the entry at the beginning of the array and returns it`
+** `fruits.unshift();			//	Adds an entry at the beginning of the array`
