Fix bullet points

--- a/2.md
+++ b/2.md
@@ -1,4 +1,4 @@
-# Day 2: JavaScript recap
+# Da 2: JavaScript recap
 
 _January 26: Continuing our recap of JavaScript from Day 1_
 
@@ -101,18 +101,18 @@ Variables, objects, and functions are all inherently part of JavaScript. JavaScr
 
 Some common ones:
 * Numbers
-⋅* `Number('747');		//	Converts argument to number`
-⋅* `parseFloat('902.59');//	Converts argument (including floating point numbers) to number`
-⋅* `parseInt(894.22);	//	Converts argument to number, truncating decimal`
+ * `Number('747');		//	Converts argument to number`
+ * `parseFloat('902.59');//	Converts argument (including floating point numbers) to number`
+ * `parseInt(894.22);	//	Converts argument to number, truncating decimal`
 * Strings
-⋅* `String(989);			//	Converts argument to string`
-⋅* `num.toString();		//	Converts variable (called) to string`
-⋅* `str.charAt(1);		//	Retrieves character at index # of string variable`
-⋅* `str.substring(7,13);	//	Retrieves characters starting at, between & ending at 2 indicies passed in as arguments`
-⋅* `txt.split(',');		//	Splits a string at every character that matches the argument passed in`
+ * `String(989);			//	Converts argument to string`
+ * `num.toString();		//	Converts variable (called) to string`
+ * `str.charAt(1);		//	Retrieves character at index # of string variable`
+ * `str.substring(7,13);	//	Retrieves characters starting at, between & ending at 2 indicies passed in as arguments`
+ * `txt.split(',');		//	Splits a string at every character that matches the argument passed in`
 * Arrays
-⋅* `var fruits = ['Banana', 'Orange', 'Apple', 'Mango'];`
-⋅* `fruits.push('Kiwi');		//	Adds an entry at the end of the array`
-⋅* `fruits.pop();				//	Removes the entry at the end of the array and returns it`
-⋅* `fruits.shift();				//	Removes the entry at the beginning of the array and returns it`
-⋅* `fruits.unshift();			//	Adds an entry at the beginning of the array`
+ * `var fruits = ['Banana', 'Orange', 'Apple', 'Mango'];`
+ * `fruits.push('Kiwi');		//	Adds an entry at the end of the array`
+ * `fruits.pop();				//	Removes the entry at the end of the array and returns it`
+ * `fruits.shift();				//	Removes the entry at the beginning of the array and returns it`
+ * `fruits.unshift();			//	Adds an entry at the beginning of the array`
