Peer challenge/Speaking code

--- a/3.md
+++ b/3.md
@@ -1,3 +1,15 @@
 # Day 3: JavaScript recap?
 
-_January 27: Continuing recap?_
+_January 27: Continuing recap_
+
+## Working on the "speak" proficiency of programming
+
+### Peer challenge
+
+Peer programming is working with 1 peer together (e.g. your neighbor at your desk). 
+
+There are 2 roles: 
+* driver (writing code)
+* observer (pointer/navigator), they'll suggest improvements, solving the problem
+
+Tends to take 10-15% longer, but results in better code. We'll switch up roles at some point during the exercise.
