--- a/3.md
+++ b/3.md
@@ -1,4 +1,4 @@
-# Day 3: JavaScript recap?
+# Day 3: JavaScript, Terminal, & GitHub, Oh My!
 
 _January 27: Continuing recap_
 
@@ -13,3 +13,36 @@ There are 2 roles:
 * observer (pointer/navigator), they'll suggest improvements, solving the problem
 
 Tends to take 10-15% longer, but results in better code. We'll switch up roles at some point during the exercise.
+
+### Terminal / Command Line / Shell
+
+There's no visual feedback in the terminal, besides the prompt (e.g., `$`). `~ <username>` indicates current directory.
+
+Basic commands:
+* `ls				//	Lists what's in directory`
+ * `ls -l 			//	Lists contents of directory long-form`
+ * `ls -la 			//	Lists ALL contents, including hidden`
+ * `pwd				//	Literally print working directory`
+ * `cd <path> 		//	Change directory, accepts absolute (globally) and relative paths`
+  * `cd /			// 	Goes to root`
+  * `cd ~			// 	Goes to home`
+  * `cd ..			//	Goes up 1 level in the directory structure (each dot adds 1 more level)`
+  * `mkdir <name>	//	Makes new folder with given name`
+  * `open <path>	//	Opens path in Finder (GUI)`
+  * 
+
+Terminal has autocomplete, so you start typing something, hit tab, and it will try to complete what you want.
+
+/ is root.
+~ is home.
+
+Why 1 dash, or 2 dashes?
+
+1 dash is used with multiple commands.
+
+2 dashes are used with a specific command, written out as a word.
+
+You can hit return as much as you'd like!
+
+Hitting the up arrow will cycle through a history of your most recent commands.
+
