First bit of notes

--- a/4.md
+++ b/4.md
@@ -1,4 +1,15 @@
 # Day 4: Objects, Switches, JavaScript Style
 _January 28_
 
-Notes will go here!
+## Objects
+
+```
+var iota = {
+	name: 'Iota',
+	inClassDate: '1-25-16',
+	color: 'Purple Blue Orange Fuchsia',
+	students: ['Anthony', 'Remy'],
+	getStudents: function() {
+		
+	}
+}
