Add objects properties methods

--- a/4.md
+++ b/4.md
@@ -10,6 +10,23 @@ var iota = {
 	color: 'Purple Blue Orange Fuchsia',
 	students: ['Anthony', 'Remy'],
 	getStudents: function() {
-		
+		var list = '';
+		for(var i = 0; i < students.length; i++) {
+			list += students[i] ', ';
+		}
+		return list;
 	}
-}
+};
+```
+
+How do you get to / reference an object's properties?
+
+```
+var color = iota.color;
+```
+
+How do you get to / reference an object's methods?
+```
+var iotaStudents = iota.getStudents();
+```
+
