--- a/4.md
+++ b/4.md
@@ -3,16 +3,21 @@ _January 28_
 
 ## Objects
 
+Objects can contain numbers, strings, arrays, functions, etc. They are stored to a name within the object. Depending on the value of the name, it's referred to as a property or a method of the object.
+Function -> method
+Everything else -> property
+
 ```
 var iota = {
 	name: 'Iota',
 	inClassDate: '1-25-16',
 	color: 'Purple Blue Orange Fuchsia',
 	students: ['Anthony', 'Remy'],
+	'the instructor': 'Kris',
 	getStudents: function() {
 		var list = '';
-		for(var i = 0; i < students.length; i++) {
-			list += students[i] ', ';
+		for(var i = 0; i < this.students.length; i++) {
+			list += this.students[i] + ', ';
 		}
 		return list;
 	}
@@ -30,3 +35,25 @@ How do you get to / reference an object's methods?
 var iotaStudents = iota.getStudents();
 ```
 
+How do you get to / reference a property with a space in an object? (AVOID THIS!)
+```
+var kris = iota['the instructor'];
+console.log(kris);
+```
+
+How to check if an object's property matches passed-in argument?
+```
+iota.hasOwnProperty('');
+```
+
+## Constructors
+
+Just a function. Naming convention dictates that you capitalize it. Creates a Student object in the example below.
+
+```
+function Student(first, last, cohort) {
+	this.firstName: first,
+	this.lastName: last,
+	this.cohort: cohort
+}
+```
