Add prototypes, instances of objects

--- a/4.md
+++ b/4.md
@@ -4,7 +4,9 @@ _January 28_
 ## Objects
 
 Objects can contain numbers, strings, arrays, functions, etc. They are stored to a name within the object. Depending on the value of the name, it's referred to as a property or a method of the object.
+
 Function -> method
+
 Everything else -> property
 
 ```
@@ -56,4 +58,24 @@ function Student(first, last, cohort) {
 	this.lastName: last,
 	this.cohort: cohort
 }
+
+var caitlin = new Student('Caitlyn', 'Collins', 'Iota');
+var remy = new Student('Remy', 'Allen', 'Iota');
+var studentRoster = [caitlin, remy];
+console.log(studentRoster[0]);
+console.log(caitlyn);
+
+var student = new Object();
+var student2 = {};
 ```
+
+`this` refers to the object that "owns" what you're trying to refer to. `new` refers to creating a new object instance, using a constructor. Besides making your own object prototype and making new instances of an object from it, you can make new instances from JavaScript's native object types.
+
+```
+var x = '';				// String
+var x1 = 0; 			// Number
+var x2 = [];			// Array
+var x3 = true;			// Boolean
+var x4 = function(){};	// Function
+```
+
