--- a/4.md
+++ b/4.md
@@ -25,7 +25,10 @@ var iota = {
 	}
 };
 ```
-
+You can add properties on the fly.
+```
+iota.prime = true;
+```
 How do you get to / reference an object's properties?
 
 ```
@@ -78,4 +81,27 @@ var x2 = [];			// Array
 var x3 = true;			// Boolean
 var x4 = function(){};	// Function
 ```
+## Switches
+```
+var result = 1;
+var day = '';
 
+if(result == 0){
+	day = 'Sunday';
+} else if(result == 1) {
+	day = 'Monday';
+}
+// ...
+
+switch(result) {
+	case 0:					// Equivalent to the first if block in the if/else if, statements above / If case matches value, then it executes code that it contains (not really truthy/falsey) Case uses strict comparison (===)
+		day = 'Sunday';		// Variable is reassigned
+		break;				// Breaks out of the switch
+	case 1:
+		day = 'Monday';
+		break;
+	// ...					// If no cases match, then JS just continues on to the next thing, or...
+	default:
+		day = 'Monday';		// Add 'default' to execute some code if no cases match
+}
+```
