Add Day 5: jQuery, DOM

--- a/5.md
+++ b/5.md
@@ -1,1 +1,15 @@
-# Day 5:
+# Day 5: DOM, jQuery
+## jQuery
+Used for traversing the DOM. Originally used to ensure JavaScript worked the same way cross-browser. Also is a huge ecosystem: tons of other plugins (or libraries) that are used in conjunction with jQuery to provide additional functionality.
+
+## DOM (Document Object Model)
+The web page that you're looking at. jQuery facilitates accessing and manipulating parts of the DOM.
+
+* Window
+	* Document
+		* `<div>`
+			* `<ul>`
+				* `<li>`
+				* `<li>`
+		* `<div>`
+		*	`...`
