Add HTML tags, structure, etc.

--- a/6.md
+++ b/6.md
@@ -1,17 +1,74 @@
 # Day 6
 ## Creating an HTML document
+HyperText Markup Language: a language for marking up content in a meaningful way
 ```
 <!doctype html>
 <html>
-  <head>
-    <title>This is the page title</title>
-    <meta name="author" content="Kris Szafranski" />
-    <link rel="stylesheet" href="style.css" />
+  <head>    <!-- Loads at the head/start of the request of this page -->
+  	<title>This is the page title</title>
+    <meta name="author" content="Kris Szafranski" />    <!-- Metadata about this page, such as author, etc. -->
+    <link rel="stylesheet" href="style.css" />          <!-- Ordering CSS and JS links here matters -->
     <script type="text/javascript">
       console.log('hi');
     </script>
   </head>
   <body>
+  	<header>this is a header</header>
+    <h1></h1>   <!-- Most important -->
+    <h2></h2>
+    <h2></h2>
+    <h6></h6>   <!-- Least important -->
+    
+    <section>
+    	<h1>Header 1</h1>			<!-- Using <section> will shrink <h1> by browser defaults because of semantic meaning -->
+    	<h2>Header 2</h2>
+    	<h6>Header 6</h5>
+    </section>
+    
+    <p>The tag <a href="">provides metadata</a> about the HTML document. <em>Metadata will not</em> be <span>displayed</span> on the page, <strong>but will</strong> be machine parsable.</p>
+    
+    <ul>
+    	<li>One</li>
+    	<li>
+    		<ol>
+    			<li>Nested ordered list</li>
+    		</ol>
+    	</li>
+    	<li>Three</li>
+    </ul>
+    <ol>
+    	<li>One</li>
+    	<li>Two</li>
+    	<li>Three</li>
+    </ol>
+    
+    <div>
+    	<h2>This is a div!</h2>
+    	<p>More content here</p>
+    </div>
+    
+    <img src="http://www.fillmurray.com/200/200" alt="" />	<!-- Will display as actual size of image unless -->
+    																												<!-- styled otherwise with CSS -->
+    																												
+		<table>
+		<thread>
+			<th>Column 1</th>
+			<th>Column 2</th>
+		</thread>
+		<tbody>
+			<tr>
+				<td>row 1 - col 1</td>
+				<td>row 1 - col 2</td>
+			</tr>
+		</tbody>
+		</table>
+    
+    <sidebar>Sidebar!</sidebar>		<!-- Sidebar, footer, header, etc. do not automatically layout like you -->
+    															<!-- might expect. You need to style them with CSS. The tag names just  -->
+    															<!-- give meaningful info about how the content is organized.						-->
+    
+    <footer>&copy; Kris Szafranski</footer>	<!-- &copy; is an HTML entity -->
+    
   </body>
 </html>
 ```
