Add CSS Best Practices

--- a/6.md
+++ b/6.md
@@ -1,4 +1,4 @@
-# Day 6
+# Day 6: Moar HTML & CSS Review
 ## Creating an HTML document
 HyperText Markup Language: a language for marking up content in a meaningful way
 ```
@@ -71,4 +71,25 @@ HyperText Markup Language: a language for marking up content in a meaningful way
     
   </body>
 </html>
+```
+## CSS Best Practices 
+Cascade!
+
+As you go down the CSS, the less general and more specific the selectors and properties become. (Or at least they should!)
+
+e.g.
+1. body, p, h1
+2. div p, .class
+3. div #id, a:hover, ul > ul > li.this-one 
+
+```
+!img {
+	/* float: right; */
+	margin: 0;
+	margin: 0 auto; /* top/bottom right/left */
+	margin: 0 auto 0 auto; /* top right bottom left */
+	width: 100px;
+	display: block; /* block or inline, elements are one or the other by default */
+	z-index: 0; /* layering elements on a page */
+}
 ```
