--- a/6.md
+++ b/6.md
@@ -1,6 +1,8 @@
 # Day 6: Moar HTML & CSS Review
 ## Creating an HTML document
+
 HyperText Markup Language: a language for marking up content in a meaningful way
+
 ```
 <!doctype html>
 <html>
@@ -73,11 +75,13 @@ HyperText Markup Language: a language for marking up content in a meaningful way
 </html>
 ```
 ## CSS Best Practices 
+
 Cascade!
 
-As you go down the CSS, the less general and more specific the selectors and properties become. (Or at least they should!)
+As you go down the CSS, the _less_ general and __more__ specific the selectors and properties become. (Or at least they should!)
 
 e.g.
+
 1. body, p, h1
 2. div p, .class
 3. div #id, a:hover, ul > ul > li.this-one 
