Add Git Review, Branches & HEAD, References sections

--- a/7.md
+++ b/7.md
@@ -1,1 +1,26 @@
 # Day 7: Git!
+
+## Reviewing past Git stuff...
+
+Good habit to run `git status` often just to see what has happened to your files, tracked and untracked, committed, up-to-date or not, etc.
+
+`git add` adds files to track, or if they are tracked and have been modified, adds files to ready to commit stage, or they are "staged." `git commit` commits files. `git commit -a -m` can be used to skip `git add` if the files you want to commit are already tracked.
+
+## Branches and the HEAD
+
+`HEAD` points to the commit or branch (a named commit) that you're checking out (`git checkout <branch>`).
+
+GitHub by default will show the files in your project as they were with the __LATEST__ commit (by default, `HEAD` is looking at the `master` branch, which is the default branch that git makes for your repo).
+
+If you checkout past commits, you're in a `detached HEAD` state. Any commits made here will not affect `master`. They will be a diverging set of commits, with which you can create a branch if you wish to merge with the `master` branch at some point in the future.
+
+`git branch` lists the branches in the repo. `git log` lists a history of commits with commit messages. `git branch <branchName>` creates a new branch, but `HEAD` will remain on branch. Use `git checkout` to look at the new branch you created.
+
+You make a commit to the new branch. The branch and `HEAD` advances in the timeline with the commit, but `master` would stay with the previous commit. Then `git checkout master` will move the `HEAD` back to `master`.
+
+When your branch is ready to merge with `master`, `git checkout master` then `git merge <branch>` to merge them. `master` then "fast-forwards" to the point at which the branch was.
+
+## References
+
+* [Git Cheatsheet (PDF)](https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf)
+* [Visual (follow how stuff changes states, etc.), interactive cheatsheet](http://ndpsoftware.com/git-cheatsheet.html)
