--- a/7.md
+++ b/7.md
@@ -20,6 +20,10 @@ You make a commit to the new branch. The branch and `HEAD` advances in the timel
 
 When your branch is ready to merge with `master`, `git checkout master` then `git merge <branch>` to merge them. `master` then "fast-forwards" to the point at which the branch was.
 
+`git pull` is a combo of `git fetch` and `git merge`. `git fetch` just retrieves any new branches (and their commits), but doesn't commit them - git is now simply aware of it locally. A branch or even the `master` branch (from the remote `origin`) will need to use `git merge` to "fast-forward" `master` locally.
+
+`git pull` should be avoided if you have modified files on the local repo.
+
 ## References
 
 * [Git Cheatsheet (PDF)](https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf)
