--- a/7.md
+++ b/7.md
@@ -24,6 +24,10 @@ When your branch is ready to merge with `master`, `git checkout master` then `gi
 
 `git pull` should be avoided if you have modified files on the local repo.
 
+## Conflicts
+
+If `origin/master` has commits that your local repo doesn't, a `git pull` will fail. You must `git fetch`, `git add`, then `git pull`, at which point git will tell you an automatic merge has failed and prompt you to fix merge conflicts before doing it. Git has formatted the source file in question to show the conflicts, and you have to edit and save the file to keep the changes you want. Then `git add` or `git commit -a` to merge the stuff.
+
 ## References
 
 * [Git Cheatsheet (PDF)](https://training.github.com/kit/downloads/github-git-cheat-sheet.pdf)
