--- a/11.md
+++ b/11.md
@@ -11,5 +11,6 @@
 
 ## jQuery Walkthrough with Scott
 
-Details are important!
+Details are important when reading instructions on projects! Avoid appending long concatenated strings. Separate it out into individual elements/tags to be appended. To save lines of code, assign children().last() to a jQuery variable. Listen for things in containers that already exist in the DOM on load; add a second parameter specific to the thing (which isn't yet in the DOM) you actually want to cause an event. Keep in mind global variables! __Unfortunately, I lost some notes because Chrome got all wacky! :(__
 
+3 functions to make in an application: init, enable, and disable.
