--- a/11.md
+++ b/11.md
@@ -14,3 +14,23 @@
 Details are important when reading instructions on projects! Avoid appending long concatenated strings. Separate it out into individual elements/tags to be appended. To save lines of code, assign children().last() to a jQuery variable. Listen for things in containers that already exist in the DOM on load; add a second parameter specific to the thing (which isn't yet in the DOM) you actually want to cause an event. Keep in mind global variables! __Unfortunately, I lost some notes because Chrome got all wacky! :(__
 
 3 functions to make in an application: init, enable, and disable.
+
+## Lectures on Server Architecture
+
+```
+var express = require('express');
+var app = express();
+
+app.set('port', 5000);
+
+//  ROUTE FUNCTIONALITY
+app.get('/', function(req, res){
+  console.log(req);
+  res.send('Hello');
+});
+//
+
+app.listen(app.get('port'), function(){
+  console.log('Listening to port: ' + app.get('port'));
+});
+```
