--- a/11.md
+++ b/11.md
@@ -20,13 +20,14 @@ Details are important when reading instructions on projects! Avoid appending lon
 ```
 var express = require('express');
 var app = express();
+var path = require('path');
 
 app.set('port', 5000);
 
 //  ROUTE FUNCTIONALITY
-app.get('/', function(req, res){
-  console.log(req);
-  res.send('Hello');
+app.get('/*', function(req, res){  //  The whack! (the base URL)
+  var file = req.params[0] || '/views/index.html';
+  res.sendFile(path.join(__dirname, './public', file));
 });
 //
 
