--- a/daily_notes/14.md
+++ b/daily_notes/14.md
@@ -16,4 +16,9 @@
 
 * `npm init` - package.json is the config of node for your project, must be at the root of the project directory, and contains the dependencies needed for the project
 * `npm install express --save` + `body-parser` + `path` - `--save` adds installed packages to dependencies in package.json
-*
+
+## Heroku
+
+* node.js
+* npm + git
+* apps
