--- a/daily_notes/21.md
+++ b/daily_notes/21.md
@@ -29,3 +29,18 @@ $.post('/path', variable, function(data) {
 });
 ```
 
+### HTTP Requests
+* GET - gets a resource
+* POST - stores a new resource (insert/save)
+* PUT - updates a resource
+* DELETE - delete a resource
+
+```
+//  Client side AJAX PUT request
+url: '/task/' + id,
+// **************
+//  Server side PUT routing
+router.put('/:id', function(req, res) {
+  res.send(req.params.id);
+});
+```
