--- a/daily_notes/22.md
+++ b/daily_notes/22.md
@@ -36,6 +36,7 @@
 angular.module('myApp', []);
 
 Dependency injection:
+```
 myApp.controller('IndexController', ['$scope', function($scope) {
   console.log('angular rocks!');
   $scope.count = 0;
@@ -68,3 +69,18 @@ myApp.controller('IndexController', ['$scope', function($scope) {
     );
   }
 }]);
+```
+### Custom Directives
+```
+myApp.directive('profileInfo',
+ function() {
+  return {
+   restrict: 'E',
+   scope: {
+    info: '='
+   }.
+   templateUrl: 'views/profileInfo.html'
+  }
+ }
+};
+```
